# Reef-Server

./: .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  test_full_pipeline.py  test_groq_cancel.py  test_orpheus_stream.py  test_pipeline_streamed.py
api/: index.py  strokes.py  tutoring.py  users.py  voice.py
lib/: __init__.py  database.py  embedding.py  gemini_proxy.py  groq_transcribe.py  groq_vision.py  latex_compiler.py  llm_client.py  logger.py  mathpix_client.py  mock_responses.py  prompt_templates.py  question_extractor.py  question_to_latex.py  reasoning.py  simulator.py  stroke_clustering.py  stroke_renderer.py
lib/models/: __init__.py  chat.py  common.py  embed.py  feedback.py  quiz.py  tutoring.py  user.py
lib/prompts/: transcription.py
lib/providers/: __init__.py  base.py  google.py  router.py
scripts/: test_extraction.py
tests/: __init__.py  conftest.py  test_api.py  test_clustering_unit.py
tools/: stroke_simulator.py
