[project]
name = "reef-server"
version = "1.0.0"
description = "FastAPI server for Reef iOS app - PDF reconstruction and embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.27.0",
    "sentence-transformers>=3.0.0",
    "requests>=2.31.0",
    "surya-ocr>=0.8.0",
    "transformers>=4.40.0,<5.0.0",
    "pymupdf>=1.24.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "lib"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
